this commit reduces the community data rows have half a rem to prevent the ETH symbol overflow on the Funded column when there's 3-digit amounts

--- a/packages/prop-house-webapp/src/components/ProfileHeader/ProfileHeader.module.css
+++ b/packages/prop-house-webapp/src/components/ProfileHeader/ProfileHeader.module.css
@@ -63,7 +63,7 @@
   margin-left: 0;
 }
 .propHouseDataRow > * {
-  margin: 0 2rem;
+  margin: 0 1.5rem;
 }
 
 .itemTitle {
